# skills

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md
BoostCoreSkills/: README.md
BoostCoreSkills/docs/: upstream-tech-radar-verification.md
BoostCoreSkills/skills/paper-digest/: .env.example  pyproject.toml
BoostCoreSkills/skills/paper-digest/docs/: workflow.md
BoostCoreSkills/skills/paper-digest/prompts/: coarse-classify.txt  conference-score-bulk.txt  external-curate.txt  input-parse.txt
BoostCoreSkills/skills/paper-digest/scripts/: abstract_fetcher.py  classifier.py  conference_discoverer.py  extractor.py  focus_areas.py  input_parser.py  quality_report.py  run.py
BoostCoreSkills/skills/paper-digest/templates/: conference.md.j2  external.md.j2  overview.md.j2
CloudSkills/: README.md
CloudSkills/patch_skill/: ARCH-4+1-kernel-patch.md  ARCH-4+1-patch-validator.md  CLAUDE.md  README.md
OmniSkills/: README.md
OmniSkills/extract-spark-ui-metrics/: SKILL.md
OmniSkills/omni-sql-perf-improvement/: SKILL.md
OmniSkills/omnioperator-debugger/: omnioperator-debugger-coredump.md
OmniSkills/omnioperator-expression-analysis/: README.md  SKILL.md
OmniSkills/omnioperator-status-analysis/: README.md
OmniSkills/spark-omnioperator-test-case-generator/: README.md  SKILL.md
OmniSkills/spark-omnioperator-test-design-generator/: README.md
OmniSkills/spark-omnioperator-test-devdoc-review/: README.md  (+1 more)
docs/: knowledge-base-design.md  upstream-tech-radar-design.md
e2e-auto-optimize/: .gitignore  README.md
hack/: ci-skill-scan.sh
(+516 files in other folders)
