[project]
name = "paper-digest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "dateparser>=1.2",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "vcrpy>=6.0",
    "pytest-vcr>=1.0",
    "jsonschema>=4.20",
]

[tool.pytest.ini_options]
testpaths = ["../../tests/paper-digest"]
asyncio_mode = "auto"
